unpackaged/main/default/objects/project_cloud__Project_Snapshot__c/project_cloud__Project_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Project Snapshot</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Project Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>