unpackaged/main/default/objects/project_cloud__Project_Snapshot__c/fields/project_cloud__Content2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Content2__c</fullName>
    <label>Content 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>