unpackaged/main/default/objects/project_cloud__Project_Snapshot__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The project that this snapshot was taken of</description>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Project Snapshots</relationshipLabel>
    <relationshipName>Project_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>