unpackaged/main/default/objects/project_cloud__Project_Snapshot__c/fields/project_cloud__Version__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Version__c</fullName>
    <description>The snapshot version</description>
    <label>Version</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>